align fix

--- a/doorstop/core/files/assets/doorstop/general.css
+++ b/doorstop/core/files/assets/doorstop/general.css
@@ -19,7 +19,7 @@ section > :first-child {
 }
 
 .l2 {
-    margin-left: 0px;
+    margin-left: 20px;
 }
 
 .l3 {
